--- a/curse/course.html
+++ b/curse/course.html
@@ -66,7 +66,7 @@
              <!-- دخول -->
 
              <div class="button-card">
-                <button>دخول</button>
+                <button>قريبا...</button>
              </div>
 
          </div>
@@ -93,7 +93,7 @@
            <!-- دخول -->
 
            <div class="button-card">
-            <button>دخول</button>
+            <button>قريبا...</button>
          </div>
 
       </div>
@@ -121,7 +121,7 @@
            <!-- دخول -->
 
            <div class="button-card">
-            <button>دخول</button>
+            <button>قريبا...</button>
          </div>
 
       </div>
