--- a/buy/buy.html
+++ b/buy/buy.html
@@ -114,7 +114,7 @@
                 <!-- box متوفر أو غير متوفر -->
 
                 <div class="Available">
-                    <h3> متوفر</h3>
+                    <h3>غير متوفر </h3>
                 </div>
             </div>
             </div>
