--- a/login/login.html
+++ b/login/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-<form action="/inpex.html">
+<form action="https://jalal-12345.github.io/Jalal1234/HOME/inpex.html#">
    <div class="content">
     <h2> تسجيل الدخول </h2>
 
