--- a/curse/course.html
+++ b/curse/course.html
@@ -17,6 +17,15 @@
     <header>
 
        <h1><a href="#">فاطمة</a></h1>
+     <div class="burger-none"> 
+
+       <div class="burger">
+         <span></span>
+         <span></span>
+         <span></span>
+       </div>
+
+      </div>
 
 
           <nav>
@@ -25,6 +34,8 @@
                 <li><a href="/HOME/inpex.html">موقعنا الرئيسية</a></li>
                 <li><a href="#">حساباتنا التواصل</a></li>
                 <li><a href="/login/login.html">تسجيل الدخول</a></li>
+                <li><a href="#" style="display: none;" id="close">X</a></li>
+
             </ul>
           </nav>
     </header>
@@ -33,9 +44,9 @@
 
 <section class="home">
     
-    <p>مرحبا بكم في موقعنا في تعلم الدورات الاحترافية </p>
+   <p>مرحبا بكم في موقعنا في تعلم الدورات الاحترافية </p>
 
-       <button>تسجيل الدخول</button> 
+      <button>تسجيل الدخول</button>
 </section>
 
 <!-- services  -->
