--- a/curse/course.html
+++ b/curse/course.html
@@ -30,10 +30,10 @@
 
           <nav>
             <ul>
-                <li><a href="/buy/buy.html">شراء منتج</a></li>
-                <li><a href="/HOME/inpex.html">موقعنا الرئيسية</a></li>
+                <li><a href="https://jalal-12345.github.io/Jalal1234/buy/buy.html">شراء منتج</a></li>
+                <li><a href="https://jalal-12345.github.io/Jalal1234/HOME/inpex.html">موقعنا الرئيسية</a></li>
                 <li><a href="#">حساباتنا التواصل</a></li>
-                <li><a href="/login/login.html">تسجيل الدخول</a></li>
+                <li><a href="https://jalal-12345.github.io/Jalal1234/login/login.html">تسجيل الدخول</a></li>
                 <li><a href="#" style="display: none;" id="close">X</a></li>
 
             </ul>
